package com.senla.hotel.constant;

public enum ServiceStatus {
    NONE, REPAIR, MAINTENANCE
}
