@startuml
class com.senla.hotel.entity.Room {
- int roomId
- ServiceStatus serviceStatus
- double price
- boolean roomAvailability
}
interface com.senla.hotel.dao.IRoomDAO {
~ Room updateRoom(Room)
~ Room getRoom(int)
~ Room addRoom(Room)
}
interface com.senla.hotel.service.IRoomService {
~ boolean doCheckIn(int)
~ boolean doCheckOut(int)
~ boolean changeRoomServiceStatus(int,ServiceStatus)
~ boolean changeRoomPrice(int,double)
~ Room getRoom(int)
~ Room addRoom(Room)
}
enum com.senla.hotel.constant.ServiceStatus {
+  NONE
+  REPAIR
+  MAINTENANCE
}
class com.senla.hotel.service.impl.RoomServiceImpl {
- RoomDAOImpl roomDAO
+ void setRoomDAO(RoomDAOImpl)
+ boolean doCheckIn(int)
+ boolean doCheckOut(int)
+ boolean changeRoomServiceStatus(int,ServiceStatus)
+ boolean changeRoomPrice(int,double)
+ Room getRoom(int)
+ Room addRoom(Room)
}
class com.senla.hotel.dao.impl.RoomDAOImpl {
- HashMap<Integer,Room> rooms
+ void setRooms(HashMap<Integer,Room>)
+ Room updateRoom(Room)
+ Room getRoom(int)
+ Room addRoom(Room)
}


com.senla.hotel.service.IRoomService <|.. com.senla.hotel.service.impl.RoomServiceImpl
com.senla.hotel.dao.IRoomDAO <|.. com.senla.hotel.dao.impl.RoomDAOImpl
@enduml